Update RailPathTool.java